--- a/spec.yaml
+++ b/spec.yaml
@@ -83,11 +83,16 @@ workflow:
     description: >-
       Create map layers for each group of patrol events.
     tasks:
+      - name: Patrol Events Colormap
+        id: pe_colormap
+        task: apply_color_map
+        partial:
+          df: ${{ workflow.pe_add_temporal_index.return }}
       - name: Split Patrol Events by Group
         id: split_pe_groups
         task: split_groups
         partial:
-          df: ${{ workflow.pe_add_temporal_index.return }}
+          df: ${{ workflow.pe_colormap.return }}
           groupers: ${{ workflow.groupers.return }}
       - name: Create map layers for each Patrols Events group
         id: patrol_events_map_layers
@@ -175,9 +180,9 @@ workflow:
           argvalues: ${{ workflow.split_patrol_traj_groups.return }}
       - name: Convert total patrol time units
         id: total_patrol_time_converted
-        task: apply_arithmetic_operation
+        task: with_unit
         mapvalues:
-          argnames: a
+          argnames: value
           argvalues: ${{ workflow.total_patrol_time.return }}
       - name: Create Single Value Widgets for Total Patrol Time Per Group
         id: total_patrol_time_sv_widgets
@@ -205,9 +210,9 @@ workflow:
           argvalues: ${{ workflow.split_patrol_traj_groups.return }}
       - name: Convert total patrol distance units
         id: total_patrol_dist_converted
-        task: apply_arithmetic_operation
+        task: with_unit
         mapvalues:
-          argnames: a
+          argnames: value
           argvalues: ${{ workflow.total_patrol_dist.return }}
       - name: Create Single Value Widgets for Total Distance Per Group
         id: total_patrol_dist_sv_widgets
@@ -233,20 +238,25 @@ workflow:
         mapvalues:
           argnames: df
           argvalues: ${{ workflow.split_patrol_traj_groups.return }}
+      - name: Convert Average Speed units
+        id: average_speed_converted
+        task: with_unit
+        mapvalues:
+          argnames: value
+          argvalues: ${{ workflow.avg_speed.return }}
       - name: Create Single Value Widgets for Avg Speed Per Group
         id: avg_speed_sv_widgets
         task: create_single_value_widget_single_view
         map:
           argnames: [view, data]
-          argvalues: ${{ workflow.avg_speed.return }}
+          argvalues: ${{ workflow.average_speed_converted.return }}
       - name: Merge per group Avg Speed SV widgets
         id: avg_speed_grouped_widget
         task: merge_widget_views
         partial:
           widgets: ${{ workflow.avg_speed_sv_widgets.return }}
 
-
-  # Grouped single value widget (4) - max speed per group
+  # Grouped single value widget (5) - max speed per group
   - title: Max speed per group
     type: task-group
     description: >-
@@ -258,12 +268,18 @@ workflow:
         mapvalues:
           argnames: df
           argvalues: ${{ workflow.split_patrol_traj_groups.return }}
+      - name: Convert Max Speed units
+        id: max_speed_converted
+        task: with_unit
+        mapvalues:
+          argnames: value
+          argvalues: ${{ workflow.max_speed.return }}
       - name: Create Single Value Widgets for Max Speed Per Group
         id: max_speed_sv_widgets
         task: create_single_value_widget_single_view
         map:
           argnames: [view, data]
-          argvalues: ${{ workflow.max_speed.return }}
+          argvalues: ${{ workflow.max_speed_converted.return }}
       - name: Merge per group Max Speed SV widgets
         id: max_speed_grouped_widget
         task: merge_widget_views
@@ -336,11 +352,17 @@ workflow:
         task: calculate_time_density
         partial:
           trajectory_gdf: ${{ workflow.patrol_traj.return }}
+      # Colormap time density
+      - name: Time Density Colormap
+        id: td_colormap
+        task: apply_color_map
+        partial:
+          df: ${{ workflow.td.return }}
       - name: Create map layer from Time Density
         id: td_map_layer
         task: create_map_layer
         partial:
-          geodataframe: ${{ workflow.td.return }}
+          geodataframe: ${{ workflow.td_colormap.return }}
       - name: Draw Ecomap from Time Density
         id: td_ecomap
         task: draw_ecomap
