--- a/test-cases.yaml
+++ b/test-cases.yaml
@@ -10,11 +10,14 @@ test1:
           display_name: "Month"
           help_text: "The month in which the patrol began or the event was updated."
 
+    time_range:
+      since: "2015-01-01T00:00:00Z"
+      until: "2015-02-28T23:59:59Z"
+      time_format: "%d %b %Y %H:%M:%S %Z"
+
     # Parameters for 'Get Patrol Observations from EarthRanger' using task `get_patrol_observations`.
     patrol_obs:
       client: "mep_dev" # (<class 'ecoscope_workflows.connections.EarthRangerClientProtocol'>, BeforeValidator(func=<bound method DataConnection.client_from_named_connection of <class 'ecoscope_workflows.connections.EarthRangerConnection'>>), WithJsonSchema(json_schema={'type': 'string', 'description': 'A named EarthRanger connection.'}, mode=None))
-      since: "2015-01-01" # (<class 'str'>, FieldInfo(annotation=NoneType, required=True, description='Start date'))
-      until: "2015-02-28" # (<class 'str'>, FieldInfo(annotation=NoneType, required=True, description='End date'))
       patrol_type: ["05ad114e-1aff-4602-bc83-efd333cdd8a2"] # (<class 'str'>, FieldInfo(annotation=NoneType, required=False, default=None, description='Comma-separated list of type of patrol UUID'))
       include_patrol_details: True # (<class 'bool'>, FieldInfo(annotation=NoneType, required=False, default=False, description='Include patrol details'))
       status: ["done"]
@@ -61,18 +64,9 @@ test1:
       layer_style:
         layer_type: "polyline"
 
-    # Parameters for 'Persist Ecomap as Text' using task `persist_text`.
-    patrol_traj_ecomap_html_url: {}
-
-    # Parameters for 'Create Map Widget for Patrols' using task `create_map_widget_single_view`.
-    patrol_traj_map_widget:
-      title: "Patrol Trajectory Map" # (<class 'str'>, FieldInfo(annotation=NoneType, required=True, description='The title of the widget'))
-
     # Parameters for 'Get Patrol Events from EarthRanger' using task `get_patrol_events`.
     patrol_events:
       client: "mep_dev" # (<class 'ecoscope_workflows.connections.EarthRangerClientProtocol'>, BeforeValidator(func=<bound method DataConnection.client_from_named_connection of <class 'ecoscope_workflows.connections.EarthRangerConnection'>>), WithJsonSchema(json_schema={'type': 'string', 'description': 'A named EarthRanger connection.'}, mode=None))
-      since: "2015-01-01" # (<class 'str'>, FieldInfo(annotation=NoneType, required=True, description='Start date'))
-      until: "2015-02-28" # (<class 'str'>, FieldInfo(annotation=NoneType, required=True, description='End date'))
       patrol_type: ["05ad114e-1aff-4602-bc83-efd333cdd8a2"] # (<class 'str'>, FieldInfo(annotation=NoneType, required=False, default=None, description='Comma-separated list of type of patrol UUID'))
       status: ["active", "done"]
 
@@ -115,6 +109,7 @@ test1:
         - name: "TERRAIN"
           opacity: 0.5
       static: False # (<class 'bool'>, FieldInfo(annotation=NoneType, required=False))
+      title: "Trajectories & Patrol Events" # (<class 'str'>, FieldInfo(annotation=NoneType, required=False))
 
     # Parameters for 'Persist Patrols Ecomap as Text' using task `persist_text`.
     traj_pe_ecomap_html_urls: {}
