--- a/pixi.toml
+++ b/pixi.toml
@@ -11,8 +11,8 @@ platforms = ["linux-64", "linux-aarch64", "osx-arm64"]
 curl = "*"
 yq = "*"
 # todo: default env
-ecoscope-workflows-core = { version = "v0.0.23", channel = "https://repo.prefix.dev/ecoscope-workflows/" }
-ecoscope-workflows-ext-ecoscope = { version = "v0.0.23", channel = "https://repo.prefix.dev/ecoscope-workflows/" }
+ecoscope-workflows-core = { version = "0.0.28", channel = "https://repo.prefix.dev/ecoscope-workflows/" }
+ecoscope-workflows-ext-ecoscope = { version = "0.0.28", channel = "https://repo.prefix.dev/ecoscope-workflows/" }
 
 [tasks]
 compile = { cmd = "./dev/recompile.sh --install" }
