to tag, github token needs permissions: contents: write

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -32,3 +34,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git push origin --tags
+      - name: Create GitHub Release
+        run: >-
+          gh release create
+          '${{ steps.create_tag.outputs.result }}'
+          --repo '${{ github.repository }}'
+          --generate-notes
