--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  push:
+  tag:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -43,6 +43,8 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git push origin --tags
       - name: Create GitHub Release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: >-
           gh release create
           '${{ steps.create_tag.outputs.result }}'
