Disable cli + async tests for workflows `0.1.0` compat

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
         ]
         api: [
           "app",
-          "cli",
+          # "cli",
         ]
         execution-mode: [
-          "async",
+          # "async",
           "sequential",
         ]
         exclude:
