--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -2,6 +2,7 @@ name: Tag
 
 on:
   pull_request:
+    types: [opened, reopened, synchronize, closed]
     branches:
       - 'main'
       - 'patch-*'
@@ -63,7 +64,7 @@ jobs:
   cut-release:
     needs: generate-tag
     # only actually cut a tag + release when PRs to main or patch branches are merged
-    if: github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
